--- a/index.html
+++ b/index.html
@@ -1,40 +1,59 @@
-<h2 id="welcome-to-github-pages">Welcome to GitHub Pages</h2>
-<p>You can use the 
-	<a href="https://github.com/molezz/molezz.github.io/edit/master/index.md">editor on GitHub</a> to maintain and preview the content for your website in Markdown files.
-</p>
-<p>Whenever you commit to this repository, GitHub Pages will run 
-	<a href="https://jekyllrb.com/">Jekyll</a> to rebuild the pages in your site, from the content in your Markdown files.
-</p>
-<h3 id="markdown">Markdown</h3>
-<p>Markdown is a lightweight and easy-to-use syntax for styling your writing. It includes conventions for</p>
-<pre>
-	<code class="language-markdown">Syntax highlighted code block
+<h3 id="windows开源推荐">windows开源推荐</h3>
+<ul>
+	<li>
+		<a href="https://github.com/poerin/Stroke">stroke</a>
+好用的鼠标手势，右键自定义
+	</li>
+	<li>
+		<a href="https://github.com/AutoHotkey/AutoHotkey">autohotkey</a>
+自定义键盘组合，比如我用RALT结合wasdqe实现上下左右home end， 更适合精简键盘如68这类按键少的
+	</li>
+	<li>
+		<a href="https://github.com/Eugeny/tabby">tabby</a>
+用以取代xshell类的，唯一的缺点就是启动慢，不过一旦启动也不关闭。
+	</li>
+	<li>
+		<a href="https://github.com/doublecmd/doublecmd">Double Commander</a>
+用以取代totalcommander，日常文件浏览
+	</li>
+	<li>
+		<a href="https://github.com/wez/wezterm">wezterm</a>
+用以替代系统自带的terminal，rust，主要启动快。相比alacritty，自定义可便携化lua文件。
+	</li>
+</ul>
+<h3 id="docker">docker</h3>
+<ul>
+	<li>
+		<p>freshrss
+使用
+			<a href="https://hub.docker.com/r/linuxserver/freshrss">docker</a>版本，日常订阅，客户端是feedme和focus reader。 对比tt rss，不如fresh轻巧便捷。
+		</p>
+	</li>
+	<li>
+		<p>calire-web
 
-# Header 1
-## Header 2
-### Header 3
-
-- Bulleted
-- List
-
-1. Numbered
-2. List
-
-**Bold** and _Italic_ and `Code` text
-
-[Link](url) and ![Image](src)
-</code>
-</pre>
-<p>For more details see 
-	<a href="https://guides.github.com/features/mastering-markdown/">GitHub Flavored Markdown</a>.
-</p>
-<h3 id="jekyll-themes">Jekyll Themes</h3>
-<p>Your Pages site will use the layout and styles from the Jekyll theme you have selected in your 
-	<a href="https://github.com/molezz/molezz.github.io/settings">repository settings</a>. The name of this theme is saved in the Jekyll 
-	<code>_config.yml</code> configuration file.
-</p>
-<h3 id="support-or-contact">Support or Contact</h3>
-<p>Having trouble with Pages? Check out our 
-	<a href="https://help.github.com/categories/github-pages-basics/">documentation</a> or 
-	<a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.
-</p>
+			<a href="https://hub.docker.com/r/johngong/calibre-web">docker</a>版本，日常书籍管理，kindle阅读和kobo阅读。电子书站点越来越少。
+		</p>
+	</li>
+	<li>
+		<p>trilium
+改用docker compose的
+			<a href="https://github.com/zadam/trilium/blob/master/docker-compose.yml">trilium</a>取代outline了。 记录和检索
+		</p>
+	</li>
+	<li>
+		<p>~~ outline wiki ~~
+~~ 
+			<a href="https://github.com/vicalloy/outline-docker-compose">docker</a> compose 版本，方便笔记记录和检索。 ~~
+		</p>
+	</li>
+</ul>
+<h3 id="typecho插件">typecho插件</h3>
+<ul>
+	<li>
+		<p>
+			<a href="https://molezz.lanzoue.com/iEFfv1brd60j">SmartSpam2.7</a>
+有些下载链接失效了，自己传了一个备份。密码:g3ji
+		</p>
+	</li>
+</ul>
